Fix: 수업제작 순환참조 제거 근데 수정할때 불러오면서 순환참조됨