@@ -1,5 +1,6 @@
 package com.todock.marimo.domain.lessonmaterial.service;
 
+import com.todock.marimo.domain.lessonmaterial.dto.LessonMaterialNameResponseDto;
 import com.todock.marimo.domain.lessonmaterial.dto.LessonMaterialRegistRequestDto;
 import com.todock.marimo.domain.lessonmaterial.entity.LessonMaterial;
 import com.todock.marimo.domain.lessonmaterial.entity.LessonRole;
@@ -24,6 +25,7 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class LessonMaterialService {
@@ -47,7 +49,6 @@ public class LessonMaterialService {
     /**
      * pdf 업로드
      */
-
     public String sendPdfToAiServer(MultipartFile pdf) {
         try {
             // 1. AI 서버 URI 설정
@@ -84,29 +85,25 @@ public class LessonMaterialService {
     /**
      * 수업 자료 저장
      */
-
     @Transactional
     public LessonMaterial save(LessonMaterialRegistRequestDto lessonMaterialInfo) {
+        validateUserRole(lessonMaterialInfo.getUserId());
+        validateRequestCounts(lessonMaterialInfo); // 여기서 한번에 검증
 
-        validateUserRole(lessonMaterialInfo.getUserId()); // 1. 선생님인지 검증
-        validateRequestCounts(lessonMaterialInfo); // 2. 요청받은 수업자료 검증
-
-        // 3. LessonMaterial 생성
         LessonMaterial lessonMaterial = new LessonMaterial(
                 lessonMaterialInfo.getUserId(),
                 lessonMaterialInfo.getBookTitle(),
                 lessonMaterialInfo.getBookContents()
         );
 
-        // 4. 열린 질문 추가
-        lessonMaterialInfo.getOpenQuestionList().forEach(questionRequest -> {
-            OpenQuestion question = new OpenQuestion(lessonMaterial, questionRequest.getQuestionTitle());
-            lessonMaterial.addOpenQuestion(question);
-        });
+        // 모든 질문을 한번에 추가
+        List<OpenQuestion> questions = lessonMaterialInfo.getOpenQuestionList().stream()
+                .map(q -> new OpenQuestion(lessonMaterial, q.getQuestionTitle()))
+                .collect(Collectors.toList());
+        lessonMaterial.setOpenQuestionList(questions);
 
-        // 5. 퀴즈 추가
+        // 퀴즈 한번에 추가
         SelectedQuiz selectedQuiz = new SelectedQuiz(lessonMaterial);
-
         List<Quiz> quizList = lessonMaterialInfo.getQuizzeList().stream()
                 .map(quizRequest -> new Quiz(
                         quizRequest.getQuestion(),
@@ -116,20 +113,15 @@ public class LessonMaterialService {
                         quizRequest.getThirdChoice(),
                         quizRequest.getFourthChoice()
                 ))
-                .toList();
+                .collect(Collectors.toList());
+        selectedQuiz.setQuizList(quizList);  // 퀴즈 리스트 한번에 설정
+        lessonMaterial.getSelectedQuizList().add(selectedQuiz);
 
-        // 두 개의 퀴즈를 한 번에 추가
-        selectedQuiz.addQuiz(quizList.get(0), quizList.get(1));
-        lessonMaterial.addSelectedQuiz(selectedQuiz);
-
-        // 6. 역할 추가
-        lessonMaterialInfo.getRoleList().forEach(roleRequest -> {
-
-            LessonRole lessonRole = new LessonRole(null, roleRequest.getRoleName());
-
-            lessonMaterial.addRole(lessonRole);
-
-        });
+        // 역할 4개 한번에 추가
+        List<LessonRole> roles = lessonMaterialInfo.getRoleList().stream()
+                .map(roleRequest -> new LessonRole(null, roleRequest.getRoleName()))
+                .collect(Collectors.toList());
+        lessonMaterial.setLessonRoleList(roles);
 
         // DB에 저장
         return lessonMaterialRepository.save(lessonMaterial);
@@ -137,55 +129,85 @@ public class LessonMaterialService {
 
 
     /**
-     * 유저 id로 유저의 수업 자료 전체 조회 (pdf 이름만 보여줌)
+     * 유저 id로 유저의 수업 자료 전체 조회
+     *
      */
-
-    public List<LessonMaterial> getLessonMaterialByUserId(Long userId) {
-
+    public List<LessonMaterialNameResponseDto> getLessonMaterialByUserId(Long userId) {
         validateUserRole(userId);
-        List<LessonMaterial> lessonMaterialList = lessonMaterialRepository.findByUserId(userId);
-
-        return lessonMaterialList;
+        return lessonMaterialRepository.findByUserId(userId)
+                .stream()
+                .map(lm -> new LessonMaterialNameResponseDto(lm.getBookTitle(), lm.getBookContents()))
+                .collect(Collectors.toList());
     }
 
 
     /**
-     * lessonMaterialId로 수업 자료 내용 조회 (작성한 내용 조회)
+     * lessonMaterialId로 수업 자료 내용 상세 조회
      */
+    public LessonMaterial getLessonMaterialByLessonMaterialId(Long lessonMaterialId) {
 
-    public LessonMaterial getLessonMaterialByLessonMaterialId(Long userId) {
-
-        validateUserRole(userId);
-
-        LessonMaterial lessonMaterial = lessonMaterialRepository.findById(userId).orElse(null);
-
-        return lessonMaterial;
-
+        return lessonMaterialRepository.findLessonMaterialByLessonMaterialId(lessonMaterialId);
 
     }
+
 
     /**
      * 수업 자료를 수업자료 id로 수정 (수정 페이지에서 수정하고 요청)
      */
-
     @Transactional
-    public void updateLessonMaterial(
-            Long lessonMaterialId,
-            LessonMaterialRegistRequestDto lessonMaterialRegistRequestDto) {
+    public void updateLessonMaterial(Long lessonMaterialId, LessonMaterialRegistRequestDto updateDto) {
+        // 1. 기존 수업 자료 조회
+        LessonMaterial lessonMaterial = lessonMaterialRepository.findById(lessonMaterialId)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 수업 자료입니다."));
 
-        // 1. 수업 자료 부터 조회
-        LessonMaterial foundLessonMaterial = lessonMaterialRepository
-                .findById(lessonMaterialId)
-                .orElseThrow(IllegalAccessError::new);
+        // 2. 기본 정보 업데이트
+        lessonMaterial.setBookTitle(updateDto.getBookTitle());
+        lessonMaterial.setBookContents(updateDto.getBookContents());
 
-        // 전체 수정 코드
+        // 3. 기존 데이터 초기화
+        lessonMaterial.getOpenQuestionList().clear();
+        lessonMaterial.getSelectedQuizList().clear();
+        lessonMaterial.getLessonRoleList().clear();
 
+        // 4. 열린 질문 업데이트
+        updateDto.getOpenQuestionList().forEach(questionRequest -> {
+            OpenQuestion openQuestion = new OpenQuestion(lessonMaterial, questionRequest.getQuestionTitle());
+            lessonMaterial.addOpenQuestion(openQuestion);
+        });
 
+        // 5. 퀴즈 업데이트
+        SelectedQuiz selectedQuiz = new SelectedQuiz(lessonMaterial);
+        List<Quiz> quizList = updateDto.getQuizzeList().stream()
+                .map(quizRequest -> new Quiz(
+                        quizRequest.getQuestion(),
+                        quizRequest.getAnswer(),
+                        quizRequest.getFirstChoice(),
+                        quizRequest.getSecondChoice(),
+                        quizRequest.getThirdChoice(),
+                        quizRequest.getFourthChoice()
+                ))
+                .toList();
+        selectedQuiz.addQuiz(quizList.get(0), quizList.get(1));
+        lessonMaterial.addSelectedQuiz(selectedQuiz);
+
+        // 6. 역할 업데이트
+        updateDto.getRoleList().forEach(roleRequest -> {
+            LessonRole lessonRole = new LessonRole(null, roleRequest.getRoleName());
+            lessonMaterial.addRole(lessonRole);
+        });
+
+        // 7. 요청 데이터 검증
+        validateRequestCounts(updateDto);
+
+        // 8. 저장
+        lessonMaterialRepository.save(lessonMaterial);
     }
+
 
     /**
      * 수업 자료 id로 수업 자료 삭제
      */
+    @Transactional
     public void deleteById(Long lessonMaterialId) {
         lessonMaterialRepository.deleteById(lessonMaterialId);
     }
@@ -197,7 +219,7 @@ public class LessonMaterialService {
     private void validateUserRole(Long userId) {
 
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalAccessError("존재하지 않는 선생님입니다."));
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 선생님입니다."));
 
         if (user.getRole() != Role.TEACHER) {
             throw new IllegalArgumentException("선생님만 수업 자료를 만들 수 있습니다.");
@@ -218,6 +240,5 @@ public class LessonMaterialService {
             throw new IllegalArgumentException("역할은 4개여야 합니다.");
         }
     }
-
 
 }
